[gd_scene load_steps=27 format=3 uid="uid://dvgkfbvyoy71v"]

[ext_resource type="Texture2D" uid="uid://dkpnoqr1cyo1e" path="res://resources/characters/small_slime.png" id="1_2yali"]
[ext_resource type="Script" uid="uid://b036iuteci4ln" path="res://scripts/small_slime.gd" id="1_v470m"]
[ext_resource type="Script" uid="uid://b5fo2iygiqlue" path="res://scripts/slime_animation_tree.gd" id="2_4q1k4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4q1k4"]
radius = 5.0

[sub_resource type="Animation" id="Animation_sw212"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_v470m"]
resource_name = "death_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y3kx0"]
resource_name = "death_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ey3na"]
resource_name = "jumpattack_left"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_3w0ca"]
resource_name = "jumpattack_right"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhvqd"]
_data = {
&"RESET": SubResource("Animation_sw212"),
&"death_left": SubResource("Animation_v470m"),
&"death_right": SubResource("Animation_y3kx0"),
&"jumpattack_left": SubResource("Animation_ey3na"),
&"jumpattack_right": SubResource("Animation_3w0ca")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v470m"]
animation = &"death_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sw212"]
animation = &"death_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_2yali"]
blend_point_0/node = SubResource("AnimationNodeAnimation_v470m")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_sw212")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2yali"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y3kx0"]
animation = &"jumpattack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ey3na"]
animation = &"jumpattack_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_4q1k4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_y3kx0")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ey3na")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y3kx0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4q1k4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v470m"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sw212"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ey3na"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3w0ca"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3w0ca"]
states/Start/position = Vector2(198, 100)
states/death/node = SubResource("AnimationNodeBlendSpace1D_2yali")
states/death/position = Vector2(670, 100)
states/idle/node = SubResource("AnimationNodeAnimation_2yali")
states/idle/position = Vector2(377, 100)
states/jump/node = SubResource("AnimationNodeBlendSpace1D_4q1k4")
states/jump/position = Vector2(377, 192)
transitions = ["death", "End", SubResource("AnimationNodeStateMachineTransition_y3kx0"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_4q1k4"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_v470m"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_sw212"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_ey3na"), "jump", "death", SubResource("AnimationNodeStateMachineTransition_3w0ca")]

[sub_resource type="CircleShape2D" id="CircleShape2D_7dday"]
radius = 13.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d3ari"]
radius = 2.0
height = 18.0

[node name="SmallSlime" type="CharacterBody2D" groups=["characters"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_v470m")
speed = 50.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_2yali")
hframes = 10
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_4q1k4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vhvqd")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_3w0ca")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/death/blend_position = 0.0
parameters/jump/blend_position = 0.0
script = ExtResource("2_4q1k4")

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(-1, -8)
shape = SubResource("CircleShape2D_7dday")
debug_color = Color(0.76876485, 0.1614674, 0.99999994, 0.41960785)

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 66
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, -1)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_d3ari")
disabled = true
debug_color = Color(0.9978985, 0, 0.16594073, 0.41960785)

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="area_entered" from="HurtArea" to="." method="_on_hurt_area_entered"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_invul_timer_timeout"]
